--- a/frontend/ipl-frontend/src/index.css
+++ b/frontend/ipl-frontend/src/index.css
@@ -4,12 +4,18 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: rgb(16,16,16);
+  background: linear-gradient(45deg, rgba(16,16,16,1) 0%, rgba(73,120,167,1) 33%, rgba(82,82,177,1) 88%); 
 
   font-family: 'Nunito', sans-serif;
   font-family: 'Poppins', sans-serif;
 }
 
 .max-width {
-  width: 1200px;
+  width: 80vw;
   margin: 0px auto;
+}
+
+:root {
+  --match-card-padding: .5rem .5rem .5rem .5rem;
 }
