updating the teampage of IPL

--- a/frontend/ipl-frontend/src/components/matchDataCard/matchDetailCard.scss
+++ b/frontend/ipl-frontend/src/components/matchDataCard/matchDetailCard.scss
@@ -1,27 +1,27 @@
 .match-detail-card {
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 1rem;
 
     .match-card {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background-color: orange;
+        background: rgb(255, 166, 0);
         border-radius: .5rem;
         overflow: hidden;
 
         .match-card-left {
             display: flex;
 
-            .match-winner {
-                background-color: rgba(255, 0, 0, 0.537);
-                padding: var(--match-card-padding);
-            }
-            .match-looser {
-                background-color: greenyellow;
-                padding: var(--match-card-padding);
-            }
+            // .match-winner {
+            //     background-color: var(--winner-color);
+            //     padding: var(--match-card-padding);
+            // }
+            // .match-looser {
+            //     background-color: var(--looser-color);
+            //     padding: var(--match-card-padding);
+            // }
             .match-card-captain {
                 padding: var(--match-card-padding);
             }
@@ -32,6 +32,7 @@
 
         .match-card-right {
             padding: var(--match-card-padding);
+            background-color: white;
         }
     }
 
