--- a/frontend/ipl-frontend/src/components/matchDataCard/matchDetailCard.scss
+++ b/frontend/ipl-frontend/src/components/matchDataCard/matchDetailCard.scss
@@ -1,41 +1,46 @@
 .match-detail-card {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 1rem;
 
-    .match-card {
+    .match-card-wrapper {
         display: flex;
         flex-direction: row;
+        align-items: center;
         justify-content: space-between;
-        background: rgb(255, 166, 0);
+        background-color: orange;
         border-radius: .5rem;
         overflow: hidden;
 
         .match-card-left {
             display: flex;
+            flex-direction: row;
+            align-items: center;
+            font-size: .8rem;
 
-            // .match-winner {
-            //     background-color: var(--winner-color);
-            //     padding: var(--match-card-padding);
-            // }
-            // .match-looser {
-            //     background-color: var(--looser-color);
-            //     padding: var(--match-card-padding);
-            // }
-            .match-card-captain {
-                padding: var(--match-card-padding);
-            }
-            .match-card-venue-name {
-                padding: var(--match-card-padding);
+            .match-card-detail-section {
+                display: flex;
+                flex-direction: row;
+
+                .match-won {
+                    padding: .5rem .5rem;
+                }
+                .match-card-captain {
+                    padding: .5rem .5rem;
+                }
+                .match-card-result {
+                    padding: .5rem .5rem;
+                }
             }
         }
 
         .match-card-right {
+            display: flex;
+            align-items: center;
+            height: 100%;
             padding: var(--match-card-padding);
             background-color: white;
         }
-    }
-
-    
+    }   
     
 }
