--- a/frontend/ipl-frontend/src/pages/teamPage/teamPage.scss
+++ b/frontend/ipl-frontend/src/pages/teamPage/teamPage.scss
@@ -1,3 +1,19 @@
 .team-page {
     height: 100vh;
+
+    .click-more {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        margin: 2rem 0 0 2rem;
+
+        .more-info-title {
+            background: white;
+            color: blueviolet;
+            width: max-content;
+            padding: .5rem;
+            border-radius: 1rem;
+        }
+    }
 }
