added pie chart to dashboard

--- a/frontend/ipl-frontend/src/components/teamDataCard/teamDetailCard.scss
+++ b/frontend/ipl-frontend/src/components/teamDataCard/teamDetailCard.scss
@@ -21,6 +21,11 @@
             }
         }
 
+        .team-chart {
+            display: flex;
+            justify-content: center;
+        }
+
         .team-details {
             grid-column: span 3;
             display: grid;
