--- a/frontend/ipl-frontend/src/components/teamDataCard/teamDetailCard.scss
+++ b/frontend/ipl-frontend/src/components/teamDataCard/teamDetailCard.scss
@@ -8,12 +8,15 @@
         row-gap: 1rem;
     
         .team-name-wrapper {
-            font-size: 3rem;
+            font-size: 5rem;
             font-weight: 700;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
             grid-column: span 2;
             padding: 1rem;
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(20px);
+            // background: rgba(255, 255, 255, 0.2);
+            // backdrop-filter: blur(20px);
             border-radius: 1rem;
     
             .team-short-name {
@@ -24,6 +27,10 @@
         .team-chart {
             display: flex;
             justify-content: center;
+            background: rgba(49, 55, 59, 0.5);
+            backdrop-filter: blur(10px);
+            border-radius: 1rem;
+            padding: 2rem;
         }
 
         .team-details {
@@ -35,7 +42,8 @@
 
             .match-details-left {
                 padding: 1rem;
-                
+
+                          
                 .team-vs {
                     font-size: 1.5rem;
                     font-weight: 500;
