--- a/frontend/ipl-frontend/src/pages/matchPage/matchPage.scss
+++ b/frontend/ipl-frontend/src/pages/matchPage/matchPage.scss
@@ -1,6 +1,38 @@
-.match-page-heading {
-    font-size: 2rem;
-    font-weight: 500;
-    padding: 1rem;
-    color: rgba(255, 255, 255, 0.8);
+.match-page-header-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .match-page-heading {
+        font-size: 2rem;
+        font-weight: 500;
+        padding: 1rem;
+        color: rgba(255, 255, 255, 0.8);
+        flex: 1;
+    }
+    .match-page-season {
+        display: flex;
+        justify-content: flex-end;
+        flex: 1;
+        // background: black;
+        color: white;
+        padding: 1rem;
+
+        label {
+            margin: 0 1rem 0 0;
+        }
+        select {
+            margin: 0 .5rem 0 0;
+            border: none;
+            border-radius: .5rem;
+        }
+        button {
+            border: 1px solid grey;
+            border-radius: .5rem;
+            color: white;
+            background:  rgba(0, 0, 0, 0.5);
+        }
+    }
 }
+
+    
