--- a/frontend/ipl-frontend/src/index.css
+++ b/frontend/ipl-frontend/src/index.css
@@ -4,8 +4,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: rgb(16,16,16);
-  background: linear-gradient(45deg, rgba(16,16,16,1) 0%, rgba(73,120,167,1) 33%, rgba(82,82,177,1) 88%); 
+  background-color: #FFBB5C;
 
   font-family: 'Nunito', sans-serif;
   font-family: 'Poppins', sans-serif;
