--- a/frontend/ipl-frontend/src/pages/matchPage/matchPage.scss
+++ b/frontend/ipl-frontend/src/pages/matchPage/matchPage.scss
@@ -12,25 +12,49 @@
     }
     .match-page-season {
         display: flex;
-        justify-content: flex-end;
-        flex: 1;
-        // background: black;
-        color: white;
-        padding: 1rem;
+        align-items: center;
+        justify-content: center;
 
-        label {
-            margin: 0 1rem 0 0;
-        }
-        select {
-            margin: 0 .5rem 0 0;
-            border: none;
-            border-radius: .5rem;
-        }
-        button {
-            border: 1px solid grey;
-            border-radius: .5rem;
-            color: white;
-            background:  rgba(0, 0, 0, 0.5);
+        form {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: rgba(0, 0, 0, 0.5);
+            padding: .5rem;
+            border-radius: .2rem;
+
+            input {
+                outline: none;
+                border: none;
+                border-radius: .1rem;
+                height: 1.5rem;
+                margin: 0 .5rem 0 0;
+                font-family: 'Poppins', sans-serif;
+            }
+            label {
+                font-size: .8rem;
+                font-weight: 500;
+                margin: 0 .5rem 0 0;
+                color: rgba(255, 255, 255, 0.5);
+            }
+            select {
+                border: none;
+                outline: none;
+                margin: 0 0.5rem 0 0;
+                border-radius: .1rem;
+                background: rgba(0, 0, 0, 0.7);
+                font-size: .8rem;
+                color: white;
+                padding: 0.5em;
+            }
+            button {
+                border: none;
+                outline: none;
+                background: black;
+                padding: .4rem;
+                color: white;
+                border-radius: .2rem;
+            }
         }
     }
 }
