created home page for ipl-app

--- a/frontend/ipl-frontend/src/components/matchDataCard/matchDetailCard.scss
+++ b/frontend/ipl-frontend/src/components/matchDataCard/matchDetailCard.scss
@@ -12,6 +12,7 @@
         border-radius: .5rem;
         overflow: hidden;
         height: 100%;
+        box-shadow: 10px 10px 0 black;
 
         .match-card-left {
             display: flex;
