--- a/frontend/ipl-frontend/src/components/teamDataCard/teamDetailCard.scss
+++ b/frontend/ipl-frontend/src/components/teamDataCard/teamDetailCard.scss
@@ -18,6 +18,7 @@
             // background: rgba(255, 255, 255, 0.2);
             // backdrop-filter: blur(20px);
             border-radius: 1rem;
+            box-shadow: 15px 15px 0 black;
     
             .team-short-name {
                 font-size: 2rem;
@@ -31,6 +32,7 @@
             backdrop-filter: blur(10px);
             border-radius: 1rem;
             padding: 2rem;
+            box-shadow: 15px 15px 0 black;
         }
 
         .team-details {
@@ -39,6 +41,7 @@
             grid-template-columns: repeat(2, 1fr);
             color: rgb(255, 255, 255);
             border-radius: 1rem;
+            box-shadow: 15px 15px 0 black;
 
             .match-details-left {
                 padding: 1rem;
