--- a/frontend/ipl-frontend/src/pages/teamPage/teamPage.scss
+++ b/frontend/ipl-frontend/src/pages/teamPage/teamPage.scss
@@ -14,6 +14,7 @@
             width: max-content;
             padding: .5rem;
             border-radius: 1rem;
+            box-shadow: 10px 10px 0 black;
         }
     }
 }
